# alia-proxy

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  README.md  README_EN.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml
aiprox/: AGENTS.md  config.py  main.py  models.py
aiprox/providers/: AGENTS.md  anthropic.py  base.py  factory.py  ollama.py  openai.py
aiprox/routers/: AGENTS.md  common.py  deps.py  export.py  media.py  openai.py
aiprox/services/: AGENTS.md  logger.py  media.py  proxy.py
alia_proxy/: AGENTS.md  config.py  main.py
alia_proxy/providers/: AGENTS.md  openai.py
alia_proxy/routers/: anthropic.py  deps.py  openai.py
alia_proxy/services/: AGENTS.md  logger.py
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  getting-started.md  intro.md  lifecycle.md
docs/src/dashboard/: analytics.md  index.md  logs.md  playground.md
docs/src/dev/: backend.md  frontend.md  index.md  new-provider.md
docs/src/features/: index.md  key-rotation.md  mapping.md  routing.md
docs/src/multimedia/: image-gen.md  index.md  storage.md  tts.md
docs/src/protocols/: anthropic.md  index.md  ollama.md  openai.md
frontend/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/: MiniChart.vue  TrendIndicator.vue
frontend/src/router/: index.ts
frontend/src/stores/: playground.ts  ui.ts
frontend/src/views/: Analytics.vue  (+5 more)
tests/: test_main.py
(+2 files in other folders)
